added: solved problem from #227 to 228.

--- a/python_algorithm/pyPractice/p221to230.ipynb
+++ b/python_algorithm/pyPractice/p221to230.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "85f9b041",
+   "id": "b9b36849",
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5e1018bc",
+   "id": "025f46f6",
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "42cf7d61",
+   "id": "72cc3457",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ba77502d",
+   "id": "a3f49764",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f1b88133",
+   "id": "364d4422",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "8b93f21d",
+   "id": "2cec510f",
    "metadata": {},
    "outputs": [
     {
@@ -154,21 +154,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "ee8a86be",
+   "execution_count": 32,
+   "id": "6637a45d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "아이엠어보\n",
-      "이유알어걸\n",
-      "\n"
+      "abc\n",
+      "def\n",
+      "ghi\n",
+      "j\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# 227\n",
+    "\n",
+    "def printmxn(string, num) :\n",
+    "    chopped = int(len(string) / num) \n",
+    "    for x in range(chopped + 1) :\n",
+    "        print(string[x * num : x * num + num])\n",
+    "printmxn(\"abcdefghij\", 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f69e024e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 228\n",
+    "\n",
+    "def calc_monthly_wage(annual_salary) :\n",
+    "    salary = int(annual_salary / 12)\n",
+    "    return monthly_wage\n",
+    "\n",
+    "calc_monthly_wage()"
+   ]
   }
  ],
  "metadata": {
