added: solved problem #234 and #235.

--- a/python_algorithm/pyPractice/p231to240.ipynb
+++ b/python_algorithm/pyPractice/p231to240.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1c4f3976",
+   "id": "0065dec0",
    "metadata": {},
    "outputs": [
     {
@@ -25,8 +25,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "abca828a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 234\n",
+    "\n",
+    "\n",
+    "def puckup_even(items) :\n",
+    "    result = []\n",
+    "    for item in items :\n",
+    "        if item % 2 == 0:\n",
+    "            result.append(item)\n",
+    "    return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d99bb535",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1234567"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 235\n",
+    "\n",
+    "def convert_int(string) :\n",
+    "    return int(string.replace(\",\", \"\"))\n",
+    "\n",
+    "convert_int(\"1,234,567\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ba6a77bc",
+   "id": "c36f616e",
    "metadata": {},
    "outputs": [],
    "source": []
