--- a/python_algorithm/pyPractice/p241to250.ipynb
+++ b/python_algorithm/pyPractice/p241to250.ipynb
@@ -1,6 +1,135 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "dbacbf39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-06-28 09:26:45.112088\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 241\n",
+    "import datetime\n",
+    "\n",
+    "now = datetime.datetime.now()\n",
+    "\n",
+    "print(now)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f14bf8f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-06-28 09:27:43.679780 <class 'datetime.datetime'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 242\n",
+    "import datetime\n",
+    "\n",
+    "now = datetime.datetime.now()\n",
+    "\n",
+    "print(now, type(now))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5c1976b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-06-23 09:29:39.256076\n",
+      "2021-06-24 09:29:39.256076\n",
+      "2021-06-25 09:29:39.256076\n",
+      "2021-06-26 09:29:39.256076\n",
+      "2021-06-27 09:29:39.256076\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 243\n",
+    "import datetime\n",
+    "\n",
+    "now = datetime.datetime.now()\n",
+    "\n",
+    "for day in range (5, 0, -1) :\n",
+    "    delta = datetime.timedelta(days=day)\n",
+    "    date = now - delta\n",
+    "    print(date)\n",
+    "    \n",
+    "# Didn't get it that much. days...? why??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6324ac73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "09:31:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 244 shifttime Method\n",
+    "\n",
+    "import datetime\n",
+    "\n",
+    "now = datetime.datetime.now()\n",
+    "\n",
+    "print(now.strftime(\"%H:%M:%S\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ee54f4f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
