update: minor changes.

--- a/python_algorithm/pyPractice/p221to230.ipynb
+++ b/python_algorithm/pyPractice/p221to230.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b9b36849",
+   "id": "48a856fe",
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "025f46f6",
+   "id": "c18236a6",
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "72cc3457",
+   "id": "965686de",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a3f49764",
+   "id": "5b56b01a",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "364d4422",
+   "id": "20cdd362",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "2cec510f",
+   "id": "59a99a4a",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "6637a45d",
+   "id": "00ffa710",
    "metadata": {},
    "outputs": [
     {
@@ -181,18 +181,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f69e024e",
+   "execution_count": 35,
+   "id": "eeddc9d3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10000"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 228\n",
     "\n",
     "def calc_monthly_wage(annual_salary) :\n",
     "    salary = int(annual_salary / 12)\n",
-    "    return monthly_wage\n",
+    "    return salary\n",
     "\n",
-    "calc_monthly_wage()"
+    "\n",
+    "calc_monthly_wage(120000)"
    ]
   }
  ],
