added: solved problem #254.

--- a/python_algorithm/pyPractice/p251to260.ipynb
+++ b/python_algorithm/pyPractice/p251to260.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6e52a341",
+   "id": "39fc0e24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1d39ccb5",
+   "id": "8d146be8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +30,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "12d8072e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waaaaaaaah!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 254 class constructor - 1\n",
+    "class Human :\n",
+    "    def __init__(self) :\n",
+    "        print(\"Waaaaaaaah!\")\n",
+    "        \n",
+    "baby = Human()\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "046ef1de",
+   "id": "134badb1",
    "metadata": {},
    "outputs": [],
    "source": []
