added: solved problem #255.

--- a/python_algorithm/pyPractice/p251to260.ipynb
+++ b/python_algorithm/pyPractice/p251to260.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "39fc0e24",
+   "id": "fb0816ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8d146be8",
+   "id": "8355d119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "12d8072e",
+   "id": "a3db2980",
    "metadata": {},
    "outputs": [
     {
@@ -54,8 +54,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "64aad931",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "애기\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 255 - class constructor - 2\n",
+    "class Human :\n",
+    "    def __init__(self, name, age, sex) :\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.sex = sex\n",
+    "        \n",
+    "baby = Human(\"애기\", 4, \"여자\")\n",
+    "\n",
+    "print(baby.name)\n",
+    "\n",
+    "# __init__은 필수요소였음.."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "134badb1",
+   "id": "b8aff96f",
    "metadata": {},
    "outputs": [],
    "source": []
