added: solved problem # 256.

--- a/python_algorithm/pyPractice/p251to260.ipynb
+++ b/python_algorithm/pyPractice/p251to260.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fb0816ee",
+   "id": "c101b067",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8355d119",
+   "id": "dfbd0106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a3db2980",
+   "id": "667a8b67",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "64aad931",
+   "id": "56014274",
    "metadata": {},
    "outputs": [
     {
@@ -83,8 +83,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "4f0dd393",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 256 - Instance attributes\n",
+    "class Human :\n",
+    "    def __init__(self, name, age, sex) :\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.sex = sex\n",
+    "        \n",
+    "areum = Human(\"아름\", 25, \"여자\")\n",
+    "print(areum.age)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b8aff96f",
+   "id": "b7fbf682",
    "metadata": {},
    "outputs": [],
    "source": []
