added: solved problem # 257.

--- a/python_algorithm/pyPractice/p251to260.ipynb
+++ b/python_algorithm/pyPractice/p251to260.ipynb
@@ -109,8 +109,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "9b32dc4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "아름: 아름 나이: 25 성별: 여자\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 257 - class method - 1\n",
+    "class Human : \n",
+    "    def __init__(self, name, age, sex) :\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.sex = sex\n",
+    "\n",
+    "    def who(self) :\n",
+    "        print(\"아름: {} 나이: {} 성별: {}\".format(self.name, self.age, self.sex))\n",
+    "\n",
+    "areum = Human(\"아름\", 25, \"여자\")\n",
+    "areum.who()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b7fbf682",
+   "id": "4a9d76e8",
    "metadata": {},
    "outputs": [],
    "source": []
