added: solved problem # 258.

--- a/python_algorithm/pyPractice/p251to260.ipynb
+++ b/python_algorithm/pyPractice/p251to260.ipynb
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9b32dc4a",
+   "id": "93c5b4f0",
    "metadata": {},
    "outputs": [
     {
@@ -138,8 +138,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "c7c08427",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이름: 불명 나이: 미상 성별: 모름\n",
+      "이름: 아름 나이: 25 성별: 여자\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 258 - class method -2\n",
+    "class Human :\n",
+    "    def __init__(self, name, age, sex) :\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.sex = sex\n",
+    "    \n",
+    "    def who(self) :\n",
+    "        print(\"이름: {} 나이: {} 성별: {}\".format(self.name, self.age, self.sex))\n",
+    "        \n",
+    "areum = Human(\"불명\", \"미상\", \"모름\")\n",
+    "areum.who()\n",
+    "\n",
+    "areum = Human(\"아름\", 25, \"여자\")\n",
+    "areum.who()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4a9d76e8",
+   "id": "150d6494",
    "metadata": {},
    "outputs": [],
    "source": []
