added: solved problem #259.

--- a/python_algorithm/pyPractice/p251to260.ipynb
+++ b/python_algorithm/pyPractice/p251to260.ipynb
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "93c5b4f0",
+   "id": "244d6e45",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c7c08427",
+   "id": "4859e3d7",
    "metadata": {},
    "outputs": [
     {
@@ -171,8 +171,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "91b27d42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "나의 죽음을 알리지마라.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 259 - class deletion \n",
+    "class Human : \n",
+    "    def __init__(self, name, age, sex) :\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.sex = sex\n",
+    "        \n",
+    "    def __del__(self) :\n",
+    "        print(\"나의 죽음을 알리지마라.\")\n",
+    "    \n",
+    "    def who() :\n",
+    "        print(\"이름 : {} 나이 : {} 성별 : {}\".format(self.name, self.age, self.sex))\n",
+    "    \n",
+    "    def setInfo(self, name, age, sex) :\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.sex = sex\n",
+    "        \n",
+    "areum = Human(\"아름\", 25, \"여자\")\n",
+    "del(areum)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "150d6494",
+   "id": "fbb11b90",
    "metadata": {},
    "outputs": [],
    "source": []
