--- a/python_algorithm/pyPractice/p271to280.ipynb
+++ b/python_algorithm/pyPractice/p271to280.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ff5c5e0c",
+   "id": "4ecfbe3c",
    "metadata": {},
    "outputs": [
     {
@@ -44,8 +44,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "436d166e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 272 class variables\n",
+    "import random\n",
+    "\n",
+    "class Account:\n",
+    "    \n",
+    "    account_count = 0\n",
+    "    \n",
+    "    def __init__(self, name, balance):\n",
+    "        self.name = name\n",
+    "        self.balance = balance\n",
+    "        self.bank = \"SC은행\"\n",
+    "        num1 = random.randint(0,999)\n",
+    "        num2 = random.randint(0, 99)\n",
+    "        num3 = random.randint(0, 999999)\n",
+    "        \n",
+    "        num1 = str(num1).zfill(3)\n",
+    "        num2 = str(num2).zfill(2)\n",
+    "        num3 = str(num2).zfill(6)\n",
+    "        self.account_number = num1 + '-' + num2 + '-' + num3\n",
+    "    \n",
+    "        Account.account_count += 1\n",
+    "    \n",
+    "kim = Account(\"김민수\", 100)\n",
+    "print(Account.account_count)\n",
+    "lee = Account(\"이정재\", 1000)\n",
+    "print(Account.account_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2e8e514e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 273 class method\n",
+    "import random\n",
+    "\n",
+    "class Account:\n",
+    "    \n",
+    "    account_count = 0\n",
+    "    \n",
+    "    def __init__(self, name, balance):\n",
+    "        self.name = name\n",
+    "        self.balance = balance\n",
+    "        self.bank = \"SC은행\"\n",
+    "        \n",
+    "        num1 = random.randint(0,999)\n",
+    "        num2 = random.randint(0, 99)\n",
+    "        num3 = random.randint(0, 999999)\n",
+    "        \n",
+    "        num1 = str(num1).zfill(3)\n",
+    "        num2 = str(num2).zfill(2)\n",
+    "        num3 = str(num2).zfill(6)\n",
+    "        self.account_number = num1 + '-' + num2 + '-' + num3\n",
+    "        Account.account_count += 1\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def get_account_num(cls):\n",
+    "        print(cls.account_count)\n",
+    "    \n",
+    "kim = Account(\"김민수\", 100)\n",
+    "lee = Account(\"이정재\", 1000)\n",
+    "\n",
+    "lee.get_account_num()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b9b1b492",
+   "id": "c09895a8",
    "metadata": {},
    "outputs": [],
    "source": []
