--- a/python_algorithm/pyPractice/p271to280.ipynb
+++ b/python_algorithm/pyPractice/p271to280.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4ecfbe3c",
+   "id": "ecc4cbad",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "436d166e",
+   "id": "5ab18530",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2e8e514e",
+   "id": "1a3697fc",
    "metadata": {},
    "outputs": [
     {
@@ -135,8 +135,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "60a615f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "110\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 274 & 275 Deposit and Withdraw\n",
+    "import random\n",
+    "\n",
+    "class Account:\n",
+    "    # class variable\n",
+    "    account_count = 0\n",
+    "\n",
+    "    def __init__(self, name, balance):\n",
+    "        self.name = name\n",
+    "        self.balance = balance\n",
+    "        self.bank = \"SC은행\"\n",
+    "\n",
+    "        # 3-2-6\n",
+    "        num1 = random.randint(0, 999)\n",
+    "        num2 = random.randint(0, 99)\n",
+    "        num3 = random.randint(0, 999999)\n",
+    "\n",
+    "        num1 = str(num1).zfill(3)  # 1 -> '1' -> '001'\n",
+    "        num2 = str(num2).zfill(2)  # 1 -> '1' -> '01'\n",
+    "        num3 = str(num3).zfill(6)  # 1 -> '1' -> '0000001'\n",
+    "        self.account_number = num1 + '-' + num2 + '-' + num3  # 001-01-000001\n",
+    "        Account.account_count += 1\n",
+    "\n",
+    "    @classmethod\n",
+    "    def get_account_num(cls):\n",
+    "        print(cls.account_count)  # Account.account_count\n",
+    "\n",
+    "    def deposit(self, amount):\n",
+    "        if amount >= 1:\n",
+    "            self.balance += amount\n",
+    "\n",
+    "    def withdraw(self, amount):\n",
+    "        if self.balance > amount:\n",
+    "            self.balance -= amount\n",
+    "\n",
+    "k = Account(\"kim\", 100)\n",
+    "k.deposit(100)\n",
+    "k.withdraw(90)\n",
+    "print(k.balance)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c09895a8",
+   "id": "d66f1a95",
    "metadata": {},
    "outputs": [],
    "source": []
