--- a/python_algorithm/pyPractice/p271to280.ipynb
+++ b/python_algorithm/pyPractice/p271to280.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ecc4cbad",
+   "id": "3d9a979f",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5ab18530",
+   "id": "0428df42",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1a3697fc",
+   "id": "211585e4",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "60a615f5",
+   "id": "7080cfe9",
    "metadata": {},
    "outputs": [
     {
@@ -191,8 +191,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "c572cd90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "은행이름:  SC은행\n",
+      "예금주: 파이썬\n",
+      "계좌번호:  631-37-871126\n",
+      "잔고:  10000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 276\n",
+    "import random\n",
+    "\n",
+    "class Account:\n",
+    "    account_count = 0\n",
+    "    \n",
+    "    def __init__(self, name, balance):\n",
+    "        self.name = name\n",
+    "        self.balance = balance\n",
+    "        self.bank = \"SC은행\"\n",
+    "        \n",
+    "        num1 = random.randint(0, 999)\n",
+    "        num2 = random.randint(0, 99)\n",
+    "        num3 = random.randint(0, 999999)\n",
+    "        \n",
+    "        num1 = str(num1).zfill(3)\n",
+    "        num2 = str(num2).zfill(2)\n",
+    "        num3 = str(num3).zfill(6)\n",
+    "        self.account_number = num1 + '-' + num2 + '-' + num3\n",
+    "        Account.account_count += 1\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def get_account_num(cls):\n",
+    "        print(cls.account_conut)\n",
+    "    \n",
+    "    def deposit(self, amount):\n",
+    "        if amount > 1:\n",
+    "            self.balance += amount\n",
+    "            \n",
+    "    def withdraw(self, amount):\n",
+    "        if self.balance > amount:\n",
+    "            self.banace -= amount\n",
+    "            \n",
+    "    def display_info(self):\n",
+    "        print(\"은행이름: \", self.bank)\n",
+    "        print(\"예금주:\", self.name)\n",
+    "        print(\"계좌번호: \", self.account_number)\n",
+    "        print(\"잔고: \", self.balance)\n",
+    "        \n",
+    "        \n",
+    "p = Account(\"파이썬\", 10000)\n",
+    "p.display_info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d66f1a95",
+   "id": "ef2ef548",
    "metadata": {},
    "outputs": [],
    "source": []
