--- a/python_algorithm/pyPractice/p271to280.ipynb
+++ b/python_algorithm/pyPractice/p271to280.ipynb
@@ -253,8 +253,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ef2ef548",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50500.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 277\n",
+    "import random\n",
+    "\n",
+    "class Account:\n",
+    "    #class varaible\n",
+    "    account_count = 0\n",
+    "    \n",
+    "    def __init__(self, name, balance):\n",
+    "        self.deposit_count = 0\n",
+    "        \n",
+    "        self.name = name\n",
+    "        self.balance = balance\n",
+    "        self.bank = \"은행\"\n",
+    "        \n",
+    "        # account number generator (3 - 2 - 6)\n",
+    "        num1 = random.randint(0, 999)\n",
+    "        num2 = random.randint(0, 99)\n",
+    "        num3 = random.randint(0, 999999)\n",
+    "        \n",
+    "        num1 = str(num1).zfill(3) # 1 -> '1' -> '001'\n",
+    "        num2 = str(num2).zfill(2) # 1 -> '1' -> '01'\n",
+    "        num3 = str(num3).zfill(6) # 1 -> '1' -> '000001'\n",
+    "        \n",
+    "        self.account_number = num1 + '-' + num2 + '-' + num3 # 001-01-000001\n",
+    "        Account.account_count += 1\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def get_account_num(cls):\n",
+    "        print(cls.account_count) # == Account.account_count\n",
+    "        \n",
+    "    def deposit(self, amount):\n",
+    "        if amount >= 1:\n",
+    "            self.balance += amount\n",
+    "            \n",
+    "            self.deposit_count += 1\n",
+    "            if self.deposit_count % 5 == 0:\n",
+    "                # release interest\n",
+    "                self.balance = (self.balance * 1.01)\n",
+    "                \n",
+    "    \n",
+    "    def withdraw(self, amount):\n",
+    "        if self.balance > amount:\n",
+    "            self.balance -= amount\n",
+    "            \n",
+    "    def display_info(self):\n",
+    "        print(\"은행이름: \", self.bank)\n",
+    "        print(\"예금주: \", self.name)\n",
+    "        print(\"계좌번호: \", self.account_number)\n",
+    "        print(\"잔고: \", self.balance)\n",
+    "        \n",
+    "        \n",
+    "p = Account(\"파이썬\", 10000)\n",
+    "\n",
+    "p.deposit(10000)\n",
+    "p.deposit(10000)\n",
+    "p.deposit(10000)\n",
+    "p.deposit(5000)\n",
+    "p.deposit(5000)\n",
+    "print(p.balance)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5833d6c",
    "metadata": {},
    "outputs": [],
    "source": []
