--- a/python_algorithm/pyPractice/p271to280.ipynb
+++ b/python_algorithm/pyPractice/p271to280.ipynb
@@ -329,15 +329,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "88e7c0ac",
+   "execution_count": 6,
+   "id": "1a019100",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<__main__.Account object at 0x000002632A559A30>, <__main__.Account object at 0x000002632A559100>, <__main__.Account object at 0x000002632A5595E0>]\n"
+      "[<__main__.Account object at 0x000002632A541EE0>, <__main__.Account object at 0x000002632A5415E0>, <__main__.Account object at 0x000002632A453070>]\n"
      ]
     }
    ],
@@ -404,6 +404,97 @@
     "\n",
     "print(data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e87a5683",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "은행이름:  은행\n",
+      "예금주:  KIM\n",
+      "계좌번호:  493-48-200632\n",
+      "잔고:  100000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 279 useing 'for' loop\n",
+    "import random\n",
+    "\n",
+    "class Account:\n",
+    "    #class varaible\n",
+    "    account_count = 0\n",
+    "    \n",
+    "    def __init__(self, name, balance):\n",
+    "        self.deposit_count = 0\n",
+    "        \n",
+    "        self.name = name\n",
+    "        self.balance = balance\n",
+    "        self.bank = \"은행\"\n",
+    "        \n",
+    "        # account number generator (3 - 2 - 6)\n",
+    "        num1 = random.randint(0, 999)\n",
+    "        num2 = random.randint(0, 99)\n",
+    "        num3 = random.randint(0, 999999)\n",
+    "        \n",
+    "        num1 = str(num1).zfill(3) # 1 -> '1' -> '001'\n",
+    "        num2 = str(num2).zfill(2) # 1 -> '1' -> '01'\n",
+    "        num3 = str(num3).zfill(6) # 1 -> '1' -> '000001'\n",
+    "        \n",
+    "        self.account_number = num1 + '-' + num2 + '-' + num3 # 001-01-000001\n",
+    "        Account.account_count += 1\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def get_account_num(cls):\n",
+    "        print(cls.account_count) # == Account.account_count\n",
+    "        \n",
+    "    def deposit(self, amount):\n",
+    "        if amount >= 1:\n",
+    "            self.balance += amount\n",
+    "            \n",
+    "            self.deposit_count += 1\n",
+    "            if self.deposit_count % 5 == 0:\n",
+    "                # release interest\n",
+    "                self.balance = (self.balance * 1.01)\n",
+    "                \n",
+    "    \n",
+    "    def withdraw(self, amount):\n",
+    "        if self.balance > amount:\n",
+    "            self.balance -= amount\n",
+    "            \n",
+    "    def display_info(self):\n",
+    "        print(\"은행이름: \", self.bank)\n",
+    "        print(\"예금주: \", self.name)\n",
+    "        print(\"계좌번호: \", self.account_number)\n",
+    "        print(\"잔고: \", self.balance)\n",
+    "        \n",
+    "        \n",
+    "data = []\n",
+    "k = Account(\"KIM\", 100000)\n",
+    "l = Account(\"LEE\", 10000)\n",
+    "p = Account(\"PARK\", 10000)\n",
+    "\n",
+    "data.append(k)\n",
+    "data.append(l)\n",
+    "data.append(p)\n",
+    "\n",
+    "for c in data:\n",
+    "    if c.balance >= 100000:\n",
+    "        c.display_info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c222d3e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
