--- a/python_algorithm/pyPractice/p271to280.ipynb
+++ b/python_algorithm/pyPractice/p271to280.ipynb
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1a019100",
+   "id": "f3fc7d8f",
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e87a5683",
+   "id": "cc8288d8",
    "metadata": {},
    "outputs": [
     {
@@ -490,8 +490,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "f9954791",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "class Account:\n",
+    "    #class varaible\n",
+    "    account_count = 0\n",
+    "    \n",
+    "    def __init__(self, name, balance):\n",
+    "        self.deposit_count = 0\n",
+    "        self.deposit_log = []\n",
+    "        self.withdraw_log = []\n",
+    "        \n",
+    "        self.name = name\n",
+    "        self.balance = balance\n",
+    "        self.bank = \"한국은행\"\n",
+    "        \n",
+    "        # account number generator (3 - 2 - 6)\n",
+    "        num1 = random.randint(0, 999)\n",
+    "        num2 = random.randint(0, 99)\n",
+    "        num3 = random.randint(0, 999999)\n",
+    "        \n",
+    "        num1 = str(num1).zfill(3) # 1 -> '1' -> '001'\n",
+    "        num2 = str(num2).zfill(2) # 1 -> '1' -> '01'\n",
+    "        num3 = str(num3).zfill(6) # 1 -> '1' -> '000001'\n",
+    "        \n",
+    "        self.account_number = num1 + '-' + num2 + '-' + num3 # 001-01-000001\n",
+    "        Account.account_count += 1\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def get_account_num(cls):\n",
+    "        print(cls.account_count) # == Account.account_count\n",
+    "        \n",
+    "    def deposit(self, amount):\n",
+    "        if amount >= 1:\n",
+    "            self.balance += amount\n",
+    "            \n",
+    "            self.deposit_count += 1\n",
+    "            if self.deposit_count % 5 == 0:\n",
+    "                # release interest\n",
+    "                self.balance = (self.balance * 1.01)\n",
+    "                \n",
+    "    \n",
+    "    def withdraw(self, amount):\n",
+    "        if self.balance > amount:\n",
+    "            self.balance -= amount\n",
+    "            \n",
+    "    def display_info(self):\n",
+    "        print(\"은행이름: \", self.bank)\n",
+    "        print(\"예금주: \", self.name)\n",
+    "        print(\"계좌번호: \", self.account_number)\n",
+    "        print(\"잔고: \", self.balance)\n",
+    "        \n",
+    "    def withdraw_history(self):\n",
+    "        for amount in self.withdraw_log:\n",
+    "            print(amount)\n",
+    "            \n",
+    "    def deposit_history(self):\n",
+    "        for amount in self.deposit_log:\n",
+    "            print(amount)\n",
+    "        \n",
+    "        \n",
+    "k = Account(\"KIM\", 100000)\n",
+    "k.deposit(100)\n",
+    "k.deposit(200)\n",
+    "k.deposit(300)\n",
+    "k.deposit_history()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c222d3e8",
+   "id": "c431223b",
    "metadata": {},
    "outputs": [],
    "source": []
