--- a/python_algorithm/pyPractice/p281to290.ipynb
+++ b/python_algorithm/pyPractice/p281to290.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5e6362c4",
+   "id": "06861f05",
    "metadata": {},
    "outputs": [
     {
@@ -30,16 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "1b778eb6",
+   "execution_count": 9,
+   "id": "94c12bb2",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "cannot assign to operator (<ipython-input-7-37f0c6ffaaa7>, line 13)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-7-37f0c6ffaaa7>\"\u001b[1;36m, line \u001b[1;32m13\u001b[0m\n\u001b[1;33m    electro-bicycle = motorcycle(2, 1000)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m cannot assign to operator\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n"
      ]
     }
    ],
@@ -56,14 +55,40 @@
     "        self.price = price\n",
     "        self.wheel = wheel\n",
     "        \n",
-    "electro_bicycle = motorcycle(2, 1000)\n",
-    "print(electro-bicycle.price)"
+    "electro_bicycle = motorcycle(1000, 2)\n",
+    "print(electro_bicycle.price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5511a711",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 283 \n",
+    "class 차:\n",
+    "    def __init__(self, 바퀴, 가격):\n",
+    "        self.바퀴 = 바퀴\n",
+    "        self.가격 = 가격\n",
+    "\n",
+    "\n",
+    "class 자전차(차):\n",
+    "    def __init__(self, 바퀴, 가격, 구동계):\n",
+    "        super().__init__(바퀴, 가격)\n",
+    "        #차.__init__(self, 바퀴, 가격)\n",
+    "        self.구동계 = 구동계\n",
+    "\n",
+    "\n",
+    "bicycle = 자전차(2, 100, \"시마노\")\n",
+    "print(bicycle.구동계)\n",
+    "print(bicycle.바퀴)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc62b584",
+   "id": "8c1f3ca2",
    "metadata": {},
    "outputs": [],
    "source": []
