--- a/python_algorithm/pyPractice/p281to290.ipynb
+++ b/python_algorithm/pyPractice/p281to290.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "06861f05",
+   "id": "c0f9efca",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "94c12bb2",
+   "id": "cf9c8ead",
    "metadata": {},
    "outputs": [
     {
@@ -43,14 +43,14 @@
     }
    ],
    "source": [
-    "# 282 class inheritance \n",
+    "# 282 & 283 class inheritance \n",
     "\n",
     "class car:\n",
     "    def __init__(self, price, wheel):\n",
     "        self.prince = price\n",
     "        self.wheel = wheel\n",
     "    \n",
-    "class motorcycle:\n",
+    "class motorcycle(car):\n",
     "    def __init__(self, price, wheel):\n",
     "        self.price = price\n",
     "        self.wheel = wheel\n",
@@ -61,12 +61,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "5511a711",
+   "execution_count": 11,
+   "id": "41713f10",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "시마노\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "# 283 \n",
+    "# 284 \n",
     "class 차:\n",
     "    def __init__(self, 바퀴, 가격):\n",
     "        self.바퀴 = 바퀴\n",
@@ -87,8 +96,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "b4842626",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "바퀴수  4\n",
+      "가격  1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 285\n",
+    "class 차:\n",
+    "    def __init__(self, 바퀴, 가격):\n",
+    "        self.바퀴 = 바퀴\n",
+    "        self.가격 = 가격\n",
+    "\n",
+    "\n",
+    "class 자동차(차):\n",
+    "    def __init__(self, 바퀴, 가격):\n",
+    "        super().__init__(바퀴, 가격)\n",
+    "\n",
+    "    def 정보(self):\n",
+    "        print(\"바퀴수 \", self.바퀴)\n",
+    "        print(\"가격 \", self.가격)\n",
+    "\n",
+    "\n",
+    "car = 자동차(4, 1000)\n",
+    "car.정보()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "738ca54f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "바퀴수  2\n",
+      "가격  100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 286\n",
+    "class 차:\n",
+    "    def __init__(self, 바퀴, 가격):\n",
+    "        self.바퀴 = 바퀴\n",
+    "        self.가격 = 가격\n",
+    "    \n",
+    "    def 정보(self):\n",
+    "        print(\"바퀴수 \", self.바퀴)\n",
+    "        print(\"가격 \", self.가격)\n",
+    "        \n",
+    "        \n",
+    "class 자동차(차):\n",
+    "    def __init__(self, 바퀴, 가격):\n",
+    "        super().__init__(바퀴, 가격)\n",
+    "    \n",
+    "class 자전차(차):\n",
+    "    def __init__(self, 바퀴, 가격, 구동계):\n",
+    "        super().__init__(바퀴, 가격)\n",
+    "        self.구동계 = 구동계\n",
+    "        \n",
+    "bicycle = 자전차(2, 100, \"시마노\")\n",
+    "bicycle.정보()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8c1f3ca2",
+   "id": "ad941e66",
    "metadata": {},
    "outputs": [],
    "source": []
