--- a/python_algorithm/pyPractice/p281to290.ipynb
+++ b/python_algorithm/pyPractice/p281to290.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c0f9efca",
+   "id": "26467461",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cf9c8ead",
+   "id": "a0f9c670",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "41713f10",
+   "id": "47f8acec",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b4842626",
+   "id": "66896132",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "738ca54f",
+   "id": "ae022087",
    "metadata": {},
    "outputs": [
     {
@@ -172,11 +172,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ad941e66",
+   "execution_count": 15,
+   "id": "9a94c6dc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "바퀴수  2\n",
+      "가격  100\n",
+      "구동계  시마노\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 287\n",
+    "class 차:\n",
+    "    def __init__(self, 바퀴, 가격):\n",
+    "        self.바퀴 = 바퀴\n",
+    "        self.가격 = 가격\n",
+    "\n",
+    "    def 정보(self):\n",
+    "        print(\"바퀴수 \", self.바퀴)\n",
+    "        print(\"가격 \", self.가격)\n",
+    "\n",
+    "class 자동차(차):\n",
+    "    def __init__(self, 바퀴, 가격):\n",
+    "        super().__init__(바퀴, 가격)\n",
+    "\n",
+    "class 자전차(차):\n",
+    "    def __init__(self, 바퀴, 가격, 구동계):\n",
+    "        super().__init__(바퀴, 가격)\n",
+    "        self.구동계 = 구동계\n",
+    "\n",
+    "    def 정보(self):\n",
+    "        super().정보()\n",
+    "        print(\"구동계 \", self.구동계)\n",
+    "\n",
+    "bicycle = 자전차(2, 100, \"시마노\")\n",
+    "bicycle.정보()"
+   ]
   }
  ],
  "metadata": {
